Significant improvements and cleanup in Key Management.
Main purpose was to avoid byte[] garbage as much as possible. The following describe the overall changes:
- Removed key namespace from trailer in favor of key identity.
- Removed the support for dynamic key namespace based on table and CF names to avoid -ve key lookup buildup in the cache
- Optimization to reduce byte[] garbage due to key namespace handling
- Refactor caches and facilitate more efficient lookups with reduced garbage generation
- Streamline the cache usage as part of making cache lookups more efficient
- Consolidate managed key identity types and shared row-key encoding so hot paths reuse backing byte[] and avoid redundant copies, further reducing allocation on lookups
- Also updated the disabledKeyManagement to update all key states to INACTIVE.
- Change ManagedKeyProvider interface to take identity where it makes sense and avoid byte[] copy
- Added a new admin API setManagedKey
- Changed KeymetaAdminImpl -> KeymetaTableAccessor relationship as composition for a cleaner relationship
- More consistent exception handling
- Refactor ManagedKeyData and keymeta to configurable digest and partial/full identity and defaulted to a hash that uses 8 bytes instead of 16.