@@ -24,6 +24,7 @@ import java.util.ArrayList;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import org.apache.hadoop.hbase.HConstants;
 import org.apache.hadoop.hbase.NamespaceDescriptor;
 import org.apache.hadoop.hbase.Server;
@@ -104,16 +105,18 @@ public class KeymetaTableAccessor extends KeyManagementBase {
   /**
    * Add the specified key to the keymeta table.
    * @param keyData The key data.
-   * @throws IOException when there is an underlying IOException.
+   * @throws IOException              when there is an underlying IOException.
+   * @throws IllegalArgumentException if key custodian or key namespace exceeds max length (255).
    */
   public void addKey(ManagedKeyData keyData) throws IOException {
     assertKeyManagementEnabled();
     List<Put> puts = new ArrayList<>(2);
     if (keyData.getKeyState() == ManagedKeyState.ACTIVE) {
-      puts.add(addMutationColumns(new Put(constructRowKeyForCustNamespace(keyData)), keyData));
+      puts.add(addMutationColumns(
+        new Put(keyData.getKeyIdentity().getIdentityPrefixView().copyBytesIfNecessary()), keyData));
     }
-    final Put putForMetadata =
-      addMutationColumns(new Put(constructRowKeyForMetadata(keyData)), keyData);
+    final Put putForMetadata = addMutationColumns(
+      new Put(keyData.getKeyIdentity().getFullIdentityView().copyBytesIfNecessary()), keyData);
     puts.add(putForMetadata);
     Connection connection = getServer().getConnection();
     try (Table table = connection.getTable(KEY_META_TABLE_NAME)) {
@@ -123,18 +126,17 @@ public class KeymetaTableAccessor extends KeyManagementBase {
 
   /**
    * Get all the keys for the specified keyCust and key_namespace.
-   * @param keyCust        The key custodian.
-   * @param keyNamespace   The namespace
-   * @param includeMarkers Whether to include key management state markers in the result.
+   * @param fullKeyIdentity The full key identity.
+   * @param includeMarkers  Whether to include key management state markers in the result.
    * @return a list of key data, one for each key, can be empty when none were found.
    * @throws IOException  when there is an underlying IOException.
    * @throws KeyException when there is an underlying KeyException.
    */
-  public List<ManagedKeyData> getAllKeys(byte[] keyCust, String keyNamespace,
-    boolean includeMarkers) throws IOException, KeyException {
+  public List<ManagedKeyData> getAllKeys(ManagedKeyIdentity fullKeyIdentity, boolean includeMarkers)
+    throws IOException, KeyException {
     assertKeyManagementEnabled();
     Connection connection = getServer().getConnection();
-    byte[] prefixForScan = constructRowKeyForCustNamespace(keyCust, keyNamespace);
+    byte[] prefixForScan = fullKeyIdentity.getIdentityPrefixView().copyBytesIfNecessary();
     PrefixFilter prefixFilter = new PrefixFilter(prefixForScan);
     Scan scan = new Scan();
     scan.setFilter(prefixFilter);
@@ -145,12 +147,12 @@ public class KeymetaTableAccessor extends KeyManagementBase {
       Set<ManagedKeyData> allKeys = new LinkedHashSet<>();
       for (Result result : scanner) {
         ManagedKeyData keyData =
-          parseFromResult(getKeyManagementService(), keyCust, keyNamespace, result);
+          parseFromResult(getKeyManagementService(), fullKeyIdentity, result);
         if (keyData != null && (includeMarkers || keyData.getKeyMetadata() != null)) {
           allKeys.add(keyData);
         }
       }
-      return allKeys.stream().toList();
+      return allKeys.stream().collect(Collectors.toList());
     }
   }
 
@@ -162,30 +164,29 @@ public class KeymetaTableAccessor extends KeyManagementBase {
    * @throws IOException  when there is an underlying IOException.
    * @throws KeyException when there is an underlying KeyException.
    */
-  public ManagedKeyData getKeyManagementStateMarker(byte[] keyCust, String keyNamespace)
+  public ManagedKeyData getKeyManagementStateMarker(ManagedKeyIdentity keyIdentity)
     throws IOException, KeyException {
-    return getKey(keyCust, keyNamespace, null);
+    Preconditions.checkNotNull(keyIdentity.getPartialIdentityLength() == 0,
+      "fullKeyIdentity must have no partial identity");
+    return getKey(keyIdentity);
   }
 
   /**
-   * Get the specific key identified by keyCust, keyNamespace and keyMetadataHash.
-   * @param keyCust         The prefix.
-   * @param keyNamespace    The namespace.
-   * @param keyMetadataHash The metadata hash.
+   * Get the specific key identified by keyCust, keyNamespace and partialIdentity.
+   * @param keyIdentity The full key identity.
    * @return the key or {@code null}
    * @throws IOException  when there is an underlying IOException.
    * @throws KeyException when there is an underlying KeyException.
    */
-  public ManagedKeyData getKey(byte[] keyCust, String keyNamespace, byte[] keyMetadataHash)
-    throws IOException, KeyException {
+  public ManagedKeyData getKey(ManagedKeyIdentity keyIdentity) throws IOException, KeyException {
     assertKeyManagementEnabled();
     Connection connection = getServer().getConnection();
     try (Table table = connection.getTable(KEY_META_TABLE_NAME)) {
-      byte[] rowKey = keyMetadataHash != null
-        ? constructRowKeyForMetadata(keyCust, keyNamespace, keyMetadataHash)
-        : constructRowKeyForCustNamespace(keyCust, keyNamespace);
+      byte[] rowKey = keyIdentity.getPartialIdentityLength() > 0
+        ? keyIdentity.getFullIdentityView().copyBytesIfNecessary()
+        : keyIdentity.getIdentityPrefixView().copyBytesIfNecessary();
       Result result = table.get(new Get(rowKey));
-      return parseFromResult(getKeyManagementService(), keyCust, keyNamespace, result);
+      return parseFromResult(getKeyManagementService(), keyIdentity, result);
     }
   }
 
@@ -195,24 +196,39 @@ public class KeymetaTableAccessor extends KeyManagementBase {
    * @throws IOException when there is an underlying IOException.
    */
   public void disableKey(ManagedKeyData keyData) throws IOException {
+    disableKey(keyData, true);
+  }
+
+  /**
+   * Disables a key by removing the wrapped key and updating its state to DISABLED. When
+   * {@code deleteCustNamespaceRow} is true and the key is ACTIVE, the (custodian, namespace) row is
+   * deleted so no key is marked ACTIVE for that scope. When false, that row is left unchanged (e.g.
+   * when disabling all keys as part of disableKeyManagement, the DISABLED marker has already been
+   * written to that row).
+   * @param keyData                The key data to disable.
+   * @param deleteCustNamespaceRow If true, delete the (custodian, namespace) row when key is
+   *                               ACTIVE; if false, skip that delete.
+   * @throws IOException when there is an underlying IOException.
+   */
+  public void disableKey(ManagedKeyData keyData, boolean deleteCustNamespaceRow)
+    throws IOException {
     assertKeyManagementEnabled();
     Preconditions.checkNotNull(keyData.getKeyMetadata(), "Key metadata cannot be null");
-    byte[] keyCust = keyData.getKeyCustodian();
-    String keyNamespace = keyData.getKeyNamespace();
-    byte[] keyMetadataHash = keyData.getKeyMetadataHash();
 
     List<Mutation> mutations = new ArrayList<>(3); // Max possible mutations.
 
-    if (keyData.getKeyState() == ManagedKeyState.ACTIVE) {
+    if (deleteCustNamespaceRow && keyData.getKeyState() == ManagedKeyState.ACTIVE) {
       // Delete the CustNamespace row
-      byte[] rowKeyForCustNamespace = constructRowKeyForCustNamespace(keyCust, keyNamespace);
+      byte[] rowKeyForCustNamespace =
+        keyData.getKeyIdentity().getIdentityPrefixView().copyBytesIfNecessary();
       mutations.add(new Delete(rowKeyForCustNamespace).setDurability(Durability.SKIP_WAL)
         .setPriority(HConstants.SYSTEMTABLE_QOS));
     }
 
-    // Update state to DISABLED and timestamp on Metadata row
-    byte[] rowKeyForMetadata = constructRowKeyForMetadata(keyCust, keyNamespace, keyMetadataHash);
-    addMutationsForKeyDisabled(mutations, rowKeyForMetadata, keyData.getKeyMetadata(),
+    // Update state to DISABLED and timestamp on Identity row
+    byte[] rowKeyForIdentity =
+      keyData.getKeyIdentity().getFullIdentityView().copyBytesIfNecessary();
+    addMutationsForKeyDisabled(mutations, rowKeyForIdentity, keyData.getKeyMetadata(),
       keyData.getKeyState() == ManagedKeyState.ACTIVE
         ? ManagedKeyState.ACTIVE_DISABLED
         : ManagedKeyState.INACTIVE_DISABLED,
@@ -227,6 +243,7 @@ public class KeymetaTableAccessor extends KeyManagementBase {
     }
   }
 
+  // Also used for adding key management state marker.
   private void addMutationsForKeyDisabled(List<Mutation> mutations, byte[] rowKey, String metadata,
     ManagedKeyState targetState, ManagedKeyState currentState) {
     Put put = new Put(rowKey);
@@ -243,6 +260,9 @@ public class KeymetaTableAccessor extends KeyManagementBase {
         .addColumns(KEY_META_INFO_FAMILY, DEK_CHECKSUM_QUAL_BYTES)
         .addColumns(KEY_META_INFO_FAMILY, DEK_WRAPPED_BY_STK_QUAL_BYTES)
         .addColumns(KEY_META_INFO_FAMILY, STK_CHECKSUM_QUAL_BYTES);
+      if (metadata == null) {
+        deleteWrappedKey.addColumns(KEY_META_INFO_FAMILY, DEK_METADATA_QUAL_BYTES);
+      }
       mutations.add(deleteWrappedKey);
     }
   }
@@ -257,13 +277,13 @@ public class KeymetaTableAccessor extends KeyManagementBase {
    * @param state        The key management state to add.
    * @throws IOException when there is an underlying IOException.
    */
-  public void addKeyManagementStateMarker(byte[] keyCust, String keyNamespace,
-    ManagedKeyState state) throws IOException {
+  public void addKeyManagementStateMarker(ManagedKeyIdentity keyIdentity, ManagedKeyState state)
+    throws IOException {
     assertKeyManagementEnabled();
     Preconditions.checkArgument(ManagedKeyState.isKeyManagementState(state),
       "State must be a key management state, got: " + state);
     List<Mutation> mutations = new ArrayList<>(2);
-    byte[] rowKey = constructRowKeyForCustNamespace(keyCust, keyNamespace);
+    byte[] rowKey = keyIdentity.getIdentityPrefixView().copyBytesIfNecessary();
     addMutationsForKeyDisabled(mutations, rowKey, null, state, null);
     Connection connection = getServer().getConnection();
     try (Table table = connection.getTable(KEY_META_TABLE_NAME)) {
@@ -277,12 +297,22 @@ public class KeymetaTableAccessor extends KeyManagementBase {
   /**
    * Updates the state of a key to one of the ACTIVE or INACTIVE states. The current state can be
    * any state, but if it the same, it becomes a no-op.
-   * @param keyData  The key data.
-   * @param newState The new state (must be ACTIVE or INACTIVE).
+   * <p>
+   * When transitioning from ACTIVE to INACTIVE, this method normally deletes the (custodian,
+   * namespace) row so that no key is marked ACTIVE for that scope. During key rotation and
+   * disablement, the caller has already written the marker key before demoting the old key; in that
+   * case pass {@code skipActiveRowDelete == true} to skip the delete and avoid removing the new
+   * active key's row.
+   * @param keyData             The key data.
+   * @param newState            The new state (must be ACTIVE or INACTIVE).
+   * @param skipActiveRowDelete If true, do not delete the (custodian, namespace) row when
+   *                            transitioning from ACTIVE to INACTIVE. Use only when the caller has
+   *                            already updated that row with a new ACTIVE key (e.g. during
+   *                            rotateActiveKey) to avoid removing the new active key's row.
    * @throws IOException when there is an underlying IOException.
    */
-  public void updateActiveState(ManagedKeyData keyData, ManagedKeyState newState)
-    throws IOException {
+  public void updateActiveState(ManagedKeyData keyData, ManagedKeyState newState,
+    boolean skipActiveRowDelete) throws IOException {
     assertKeyManagementEnabled();
     ManagedKeyState currentState = keyData.getKeyState();
 
@@ -298,27 +328,31 @@ public class KeymetaTableAccessor extends KeyManagementBase {
     }
 
     List<Row> mutations = new ArrayList<>(2);
-    byte[] rowKeyForCustNamespace = constructRowKeyForCustNamespace(keyData);
-    byte[] rowKeyForMetadata = constructRowKeyForMetadata(keyData);
+    Bytes rowKeyForCustNamespace = keyData.getKeyIdentity().getIdentityPrefixView();
 
     // First take care of the active key specific row.
     if (newState == ManagedKeyState.ACTIVE) {
       // INACTIVE -> ACTIVE: Add CustNamespace row and update Metadata row
-      mutations.add(addMutationColumns(new Put(rowKeyForCustNamespace), keyData));
+      mutations
+        .add(addMutationColumns(new Put(rowKeyForCustNamespace.copyBytesIfNecessary()), keyData));
     }
-    if (currentState == ManagedKeyState.ACTIVE) {
-      mutations.add(new Delete(rowKeyForCustNamespace).setDurability(Durability.SKIP_WAL)
-        .setPriority(HConstants.SYSTEMTABLE_QOS));
+    if (currentState == ManagedKeyState.ACTIVE && !skipActiveRowDelete) {
+      // ACTIVE -> INACTIVE: Delete CustNamespace row (unless it was already overwritten by
+      // a new ACTIVE key, e.g. during rotation).
+      mutations.add(new Delete(rowKeyForCustNamespace.copyBytesIfNecessary())
+        .setDurability(Durability.SKIP_WAL).setPriority(HConstants.SYSTEMTABLE_QOS));
     }
 
-    // Now take care of the key specific row (for point gets by metadata).
+    Bytes rowKeyForIdentity = keyData.getKeyIdentity().getFullIdentityView();
+    // Now take care of the key specific row (for point gets by identity).
     if (!ManagedKeyState.isUsable(currentState)) {
       // For DISABLED and FAILED keys, we don't expect cached key material, so add all columns
       // similar to what addKey() does.
-      mutations.add(addMutationColumns(new Put(rowKeyForMetadata), keyData));
+      mutations.add(addMutationColumns(new Put(rowKeyForIdentity.copyBytesIfNecessary()), keyData));
     } else {
       // We expect cached key material, so only update the state and timestamp columns.
-      mutations.add(addMutationColumnsForState(new Put(rowKeyForMetadata), newState));
+      mutations.add(
+        addMutationColumnsForState(new Put(rowKeyForIdentity.copyBytesIfNecessary()), newState));
     }
 
     Connection connection = getServer().getConnection();
@@ -344,6 +378,40 @@ public class KeymetaTableAccessor extends KeyManagementBase {
   }
 
   /**
+   * Updates only the refresh timestamp column for the given key to the current time. Used when a
+   * key is refreshed but unchanged, so that the stored timestamp reflects the last refresh time.
+   * @param keyData The key data whose refresh timestamp should be updated.
+   * @throws IOException when there is an underlying IOException.
+   */
+  public void updateRefreshTimestamp(ManagedKeyData keyData) throws IOException {
+    assertKeyManagementEnabled();
+    Preconditions.checkNotNull(keyData.getKeyMetadata(), "Key metadata cannot be null");
+    long now = EnvironmentEdgeManager.currentTime();
+    List<Mutation> mutations = new ArrayList<>(2);
+    byte[] rowKeyForIdentity =
+      keyData.getKeyIdentity().getFullIdentityView().copyBytesIfNecessary();
+    Put putMetadata = new Put(rowKeyForIdentity).setDurability(Durability.SKIP_WAL)
+      .setPriority(HConstants.SYSTEMTABLE_QOS)
+      .addColumn(KEY_META_INFO_FAMILY, REFRESHED_TIMESTAMP_QUAL_BYTES, Bytes.toBytes(now));
+    mutations.add(putMetadata);
+    if (keyData.getKeyState() == ManagedKeyState.ACTIVE) {
+      byte[] rowKeyForCustNamespace =
+        keyData.getKeyIdentity().getIdentityPrefixView().copyBytesIfNecessary();
+      Put putCustNamespace = new Put(rowKeyForCustNamespace).setDurability(Durability.SKIP_WAL)
+        .setPriority(HConstants.SYSTEMTABLE_QOS)
+        .addColumn(KEY_META_INFO_FAMILY, REFRESHED_TIMESTAMP_QUAL_BYTES, Bytes.toBytes(now));
+      mutations.add(putCustNamespace);
+    }
+    Connection connection = getServer().getConnection();
+    try (Table table = connection.getTable(KEY_META_TABLE_NAME)) {
+      table.batch(mutations, null);
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+      throw new IOException("Interrupted while updating refresh timestamp", e);
+    }
+  }
+
+  /**
    * Add the mutation columns to the given Put that are derived from the keyData.
    */
   private Put addMutationColumns(Put put, ManagedKeyData keyData) throws IOException {
@@ -357,7 +425,7 @@ public class KeymetaTableAccessor extends KeyManagementBase {
           Bytes.toBytes(keyData.getKeyChecksum()))
         .addColumn(KEY_META_INFO_FAMILY, DEK_WRAPPED_BY_STK_QUAL_BYTES, dekWrappedBySTK)
         .addColumn(KEY_META_INFO_FAMILY, STK_CHECKSUM_QUAL_BYTES,
-          Bytes.toBytes(latestSystemKey.getKeyChecksum()));
+          latestSystemKey.getKeyIdentity().getFullIdentityView().copyBytesIfNecessary());
     }
     Put result =
       addMutationColumnsForState(put, keyData.getKeyState(), keyData.getRefreshTimestamp());
@@ -372,33 +440,14 @@ public class KeymetaTableAccessor extends KeyManagementBase {
   }
 
   @InterfaceAudience.Private
-  public static byte[] constructRowKeyForMetadata(ManagedKeyData keyData) {
-    Preconditions.checkNotNull(keyData.getKeyMetadata(), "Key metadata cannot be null");
-    return constructRowKeyForMetadata(keyData.getKeyCustodian(), keyData.getKeyNamespace(),
-      keyData.getKeyMetadataHash());
-  }
-
-  @InterfaceAudience.Private
-  public static byte[] constructRowKeyForMetadata(byte[] keyCust, String keyNamespace,
-    byte[] keyMetadataHash) {
-    return Bytes.add(constructRowKeyForCustNamespace(keyCust, keyNamespace), keyMetadataHash);
-  }
-
-  @InterfaceAudience.Private
-  public static byte[] constructRowKeyForCustNamespace(ManagedKeyData keyData) {
-    return constructRowKeyForCustNamespace(keyData.getKeyCustodian(), keyData.getKeyNamespace());
-  }
-
-  @InterfaceAudience.Private
-  public static byte[] constructRowKeyForCustNamespace(byte[] keyCust, String keyNamespace) {
-    int custLength = keyCust.length;
-    return Bytes.add(Bytes.toBytes(custLength), keyCust, Bytes.toBytes(keyNamespace));
-  }
-
-  @InterfaceAudience.Private
   public static ManagedKeyData parseFromResult(KeyManagementService keyManagementService,
-    byte[] keyCust, String keyNamespace, Result result) throws IOException, KeyException {
+    ManagedKeyIdentity originalFullKeyIdentity, Result result) throws IOException, KeyException {
     if (result == null || result.isEmpty()) {
+      LOG.warn(
+        "parseFromResult: returning null because result is null or empty (keyCust={}, keyCust length={}, "
+          + "keyNamespace={})",
+        originalFullKeyIdentity.getCustodianEncoded(), originalFullKeyIdentity.getCustodianLength(),
+        originalFullKeyIdentity.getNamespaceString());
       return null;
     }
     ManagedKeyState keyState =
@@ -414,13 +463,16 @@ public class KeymetaTableAccessor extends KeyManagementBase {
     }
     Key dek = null;
     if (dekWrappedByStk != null) {
-      long stkChecksum =
-        Bytes.toLong(result.getValue(KEY_META_INFO_FAMILY, STK_CHECKSUM_QUAL_BYTES));
+      byte[] stkIdentityBytes = result.getValue(KEY_META_INFO_FAMILY, STK_CHECKSUM_QUAL_BYTES);
       ManagedKeyData clusterKey =
-        keyManagementService.getSystemKeyCache().getSystemKeyByChecksum(stkChecksum);
+        keyManagementService.getSystemKeyCache().getSystemKeyByIdentity(stkIdentityBytes);
       if (clusterKey == null) {
-        LOG.error("Dropping key with metadata: {} as STK with checksum: {} is unavailable",
-          dekMetadata, stkChecksum);
+        LOG.error(
+          "Dropping key with metadata: {} as STK with identity is unavailable"
+            + "(keyCust={}, keyCust length={}, keyNamespace={})",
+          dekMetadata, originalFullKeyIdentity.getCustodianEncoded(),
+          originalFullKeyIdentity.getCustodianLength(),
+          originalFullKeyIdentity.getNamespaceString());
         return null;
       }
       dek = EncryptionUtil.unwrapKey(keyManagementService.getConfiguration(), null, dekWrappedByStk,
@@ -430,22 +482,40 @@ public class KeymetaTableAccessor extends KeyManagementBase {
       Bytes.toLong(result.getValue(KEY_META_INFO_FAMILY, REFRESHED_TIMESTAMP_QUAL_BYTES));
     ManagedKeyData dekKeyData;
     if (dekMetadata != null) {
+      // We do nnot have a partial identity in the originalFullKeyIdentity in the following cases
+      // and we need to create a full identity from the metadata:
+      // - When it is a point get of an ACTIVE marker
+      // - When it is a scan for all keys and the key state is usable.
+      ManagedKeyIdentity fullKeyIdentity = originalFullKeyIdentity.getPartialIdentityLength() > 0
+        ? originalFullKeyIdentity
+        : ManagedKeyIdentityUtils.fullKeyIdentityFromMetadata(
+          originalFullKeyIdentity.getCustodianView(), originalFullKeyIdentity.getNamespaceView(),
+          dekMetadata);
       dekKeyData =
-        new ManagedKeyData(keyCust, keyNamespace, dek, keyState, dekMetadata, refreshedTimestamp);
+        new ManagedKeyData(fullKeyIdentity, dek, keyState, dekMetadata, refreshedTimestamp);
       if (dek != null) {
         long dekChecksum =
           Bytes.toLong(result.getValue(KEY_META_INFO_FAMILY, DEK_CHECKSUM_QUAL_BYTES));
         if (dekKeyData.getKeyChecksum() != dekChecksum) {
           LOG.error(
             "Dropping key, current key checksum: {} didn't match the expected checksum: {}"
-              + " for key with metadata: {}",
-            dekKeyData.getKeyChecksum(), dekChecksum, dekMetadata);
+              + " for key with metadata: {} (keyCust={}, keyCust length={}, keyNamespace={})",
+            dekKeyData.getKeyChecksum(), dekChecksum, dekMetadata,
+            fullKeyIdentity.getCustodianEncoded(), fullKeyIdentity.getCustodianLength(),
+            fullKeyIdentity.getNamespaceString());
           dekKeyData = null;
         }
       }
     } else {
-      // Key management marker.
-      dekKeyData = new ManagedKeyData(keyCust, keyNamespace, keyState, refreshedTimestamp);
+      if (originalFullKeyIdentity.getPartialIdentityLength() != 0) {
+        throw new IllegalArgumentException(
+          "Partial identity length must be 0 for key management marker, got: "
+            + originalFullKeyIdentity.getPartialIdentityLength() + " (keyCust="
+            + originalFullKeyIdentity.getCustodianEncoded() + ", keyCust length="
+            + originalFullKeyIdentity.getCustodianLength() + ", keyNamespace="
+            + originalFullKeyIdentity.getNamespaceString() + ")");
+      }
+      dekKeyData = new ManagedKeyData(originalFullKeyIdentity, keyState, refreshedTimestamp);
     }
     return dekKeyData;
   }
