@@ -17,7 +17,7 @@
  */
 package org.apache.hadoop.hbase.keymeta;
 
-import static org.apache.hadoop.hbase.io.crypto.ManagedKeyData.KEY_SPACE_GLOBAL;
+import static org.apache.hadoop.hbase.io.crypto.ManagedKeyData.KEY_SPACE_GLOBAL_BYTES;
 import static org.apache.hadoop.hbase.io.crypto.ManagedKeyState.ACTIVE;
 import static org.apache.hadoop.hbase.io.crypto.ManagedKeyState.ACTIVE_DISABLED;
 import static org.apache.hadoop.hbase.io.crypto.ManagedKeyState.DISABLED;
@@ -31,18 +31,16 @@ import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.KEY_META_INFO
 import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.KEY_STATE_QUAL_BYTES;
 import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.REFRESHED_TIMESTAMP_QUAL_BYTES;
 import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.STK_CHECKSUM_QUAL_BYTES;
-import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.constructRowKeyForCustNamespace;
-import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.constructRowKeyForMetadata;
 import static org.apache.hadoop.hbase.keymeta.KeymetaTableAccessor.parseFromResult;
+import static org.apache.hadoop.hbase.keymeta.ManagedKeyIdentityUtils.constructRowKeyForCustNamespace;
+import static org.apache.hadoop.hbase.keymeta.ManagedKeyIdentityUtils.constructRowKeyForIdentity;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.anyLong;
 import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -61,6 +59,7 @@ import org.apache.hadoop.hbase.CellUtil;
 import org.apache.hadoop.hbase.HBaseClassTestRule;
 import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.hadoop.hbase.HConstants;
+import org.apache.hadoop.hbase.KeyValue;
 import org.apache.hadoop.hbase.client.Connection;
 import org.apache.hadoop.hbase.client.Delete;
 import org.apache.hadoop.hbase.client.Durability;
@@ -79,6 +78,8 @@ import org.apache.hadoop.hbase.security.EncryptionUtil;
 import org.apache.hadoop.hbase.testclassification.MasterTests;
 import org.apache.hadoop.hbase.testclassification.SmallTests;
 import org.apache.hadoop.hbase.util.Bytes;
+import org.apache.hadoop.hbase.util.EnvironmentEdgeManager;
+import org.apache.hadoop.hbase.util.ManualEnvironmentEdge;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.ClassRule;
@@ -99,13 +100,23 @@ import org.mockito.MockitoAnnotations;
 @Suite.SuiteClasses({ TestKeymetaTableAccessor.TestAdd.class,
   TestKeymetaTableAccessor.TestAddWithNullableFields.class, TestKeymetaTableAccessor.TestGet.class,
   TestKeymetaTableAccessor.TestDisableKey.class,
-  TestKeymetaTableAccessor.TestUpdateActiveState.class, })
+  TestKeymetaTableAccessor.TestUpdateActiveState.class,
+  TestKeymetaTableAccessor.TestCustodianNamespaceLength.class,
+  TestKeymetaTableAccessor.TestRefreshTimestamp.class })
 @Category({ MasterTests.class, SmallTests.class })
 public class TestKeymetaTableAccessor {
   protected static final String ALIAS = "custId1";
   protected static final byte[] CUST_ID = ALIAS.getBytes();
+  protected static final Bytes CUST_ID_BYTES = new Bytes(CUST_ID);
   protected static final String KEY_NAMESPACE = "namespace";
+  protected static final Bytes KEY_NAMESPACE_BYTES = new Bytes(KEY_NAMESPACE.getBytes());
   protected static String KEY_METADATA = "metadata1";
+  protected static ManagedKeyIdentity KEY_IDENTITY_PREFIX =
+    new KeyIdentityPrefixBytesBacked(CUST_ID_BYTES, KEY_NAMESPACE_BYTES);
+  protected static ManagedKeyIdentity KEY_IDENTITY_FULL = ManagedKeyIdentityUtils
+    .fullKeyIdentityFromMetadata(CUST_ID_BYTES, KEY_NAMESPACE_BYTES, KEY_METADATA);
+  protected static ManagedKeyIdentity CUST_GLOBAL_ID =
+    new KeyIdentityPrefixBytesBacked(CUST_ID_BYTES, KEY_SPACE_GLOBAL_BYTES);
 
   @Mock
   protected MasterServices server;
@@ -149,7 +160,7 @@ public class TestKeymetaTableAccessor {
 
     latestSystemKey = managedKeyProvider.getSystemKey("system-id".getBytes());
     when(systemKeyCache.getLatestSystemKey()).thenReturn(latestSystemKey);
-    when(systemKeyCache.getSystemKeyByChecksum(anyLong())).thenReturn(latestSystemKey);
+    when(systemKeyCache.getSystemKeyByIdentity(any(byte[].class))).thenReturn(latestSystemKey);
   }
 
   @After
@@ -177,7 +188,7 @@ public class TestKeymetaTableAccessor {
     @Test
     public void testAddKey() throws Exception {
       managedKeyProvider.setMockedKeyState(ALIAS, keyState);
-      ManagedKeyData keyData = managedKeyProvider.getManagedKey(CUST_ID, KEY_SPACE_GLOBAL);
+      ManagedKeyData keyData = managedKeyProvider.getManagedKey(CUST_GLOBAL_ID);
 
       accessor.addKey(keyData);
 
@@ -185,10 +196,13 @@ public class TestKeymetaTableAccessor {
       List<Put> puts = putCaptor.getValue();
       assertEquals(keyState == ACTIVE ? 2 : 1, puts.size());
       if (keyState == ACTIVE) {
-        assertPut(keyData, puts.get(0), constructRowKeyForCustNamespace(keyData), ACTIVE);
-        assertPut(keyData, puts.get(1), constructRowKeyForMetadata(keyData), ACTIVE);
+        assertPut(keyData, puts.get(0), constructRowKeyForCustNamespace(keyData.getKeyCustodian(),
+          keyData.getKeyNamespaceBytes()), ACTIVE);
+        assertPut(keyData, puts.get(1), constructRowKeyForIdentity(keyData.getKeyCustodian(),
+          keyData.getKeyNamespaceBytes(), keyData.getPartialIdentity()), ACTIVE);
       } else {
-        assertPut(keyData, puts.get(0), constructRowKeyForMetadata(keyData), keyState);
+        assertPut(keyData, puts.get(0), constructRowKeyForIdentity(keyData.getKeyCustodian(),
+          keyData.getKeyNamespaceBytes(), keyData.getPartialIdentity()), keyState);
       }
     }
   }
@@ -202,14 +216,15 @@ public class TestKeymetaTableAccessor {
 
     @Captor
     private ArgumentCaptor<List<Mutation>> batchCaptor;
+    @Captor
+    private ArgumentCaptor<List<Put>> putCaptor;
 
     @Test
     public void testAddKeyManagementStateMarker() throws Exception {
       managedKeyProvider.setMockedKeyState(ALIAS, FAILED);
-      ManagedKeyData keyData = new ManagedKeyData(CUST_ID, KEY_SPACE_GLOBAL, FAILED);
+      ManagedKeyData keyData = new ManagedKeyData(KEY_IDENTITY_PREFIX, FAILED);
 
-      accessor.addKeyManagementStateMarker(keyData.getKeyCustodian(), keyData.getKeyNamespace(),
-        keyData.getKeyState());
+      accessor.addKeyManagementStateMarker(keyData.getKeyIdentity(), keyData.getKeyState());
 
       verify(table).batch(batchCaptor.capture(), any());
       List<Mutation> mutations = batchCaptor.getValue();
@@ -221,8 +236,8 @@ public class TestKeymetaTableAccessor {
       Put put = (Put) mutation1;
       Delete delete = (Delete) mutation2;
 
-      // Verify the row key uses state value for metadata hash
-      byte[] expectedRowKey = constructRowKeyForCustNamespace(CUST_ID, KEY_SPACE_GLOBAL);
+      // Row key must match KEY_IDENTITY_PREFIX (custodian + namespace), not global key space
+      byte[] expectedRowKey = constructRowKeyForCustNamespace(CUST_ID, KEY_NAMESPACE_BYTES.get());
       assertEquals(0, Bytes.compareTo(expectedRowKey, put.getRow()));
 
       Map<Bytes, Bytes> valueMap = getValueMap(put);
@@ -246,7 +261,23 @@ public class TestKeymetaTableAccessor {
       // Verify the row key is correct for a failure marker
       assertEquals(0, Bytes.compareTo(expectedRowKey, delete.getRow()));
       // Verify the key checksum, wrapped key, and STK checksum columns are deleted
-      assertDeleteColumns(delete);
+      assertDeleteColumns(delete, true);
+    }
+
+    @Test
+    public void testAddKeyWithoutMetadataSkipsMetadataColumn() throws Exception {
+      ManagedKeyData keyData = new ManagedKeyData(KEY_IDENTITY_FULL, FAILED);
+
+      accessor.addKey(keyData);
+
+      verify(table).put(putCaptor.capture());
+      List<Put> puts = putCaptor.getValue();
+      assertEquals(1, puts.size());
+      Map<Bytes, Bytes> valueMap = getValueMap(puts.get(0));
+      assertNull(valueMap.get(new Bytes(DEK_METADATA_QUAL_BYTES)));
+      assertEquals(new Bytes(new byte[] { FAILED.getVal() }),
+        valueMap.get(new Bytes(KEY_STATE_QUAL_BYTES)));
+      assertNotNull(valueMap.get(new Bytes(REFRESHED_TIMESTAMP_QUAL_BYTES)));
     }
   }
 
@@ -269,6 +300,10 @@ public class TestKeymetaTableAccessor {
 
       when(result1.isEmpty()).thenReturn(false);
       when(result2.isEmpty()).thenReturn(false);
+      when(result1.getRow())
+        .thenReturn(KEY_IDENTITY_FULL.getFullIdentityView().copyBytesIfNecessary());
+      when(result2.getRow())
+        .thenReturn(KEY_IDENTITY_FULL.getFullIdentityView().copyBytesIfNecessary());
       when(result1.getValue(eq(KEY_META_INFO_FAMILY), eq(KEY_STATE_QUAL_BYTES)))
         .thenReturn(new byte[] { ACTIVE.getVal() });
       when(result2.getValue(eq(KEY_META_INFO_FAMILY), eq(KEY_STATE_QUAL_BYTES)))
@@ -287,39 +322,50 @@ public class TestKeymetaTableAccessor {
 
     @Test
     public void testParseEmptyResult() throws Exception {
-      Result result = mock(Result.class);
-      when(result.isEmpty()).thenReturn(true);
+      assertNull(parseFromResult(server, KEY_IDENTITY_FULL, null));
+      assertNull(parseFromResult(server, KEY_IDENTITY_FULL, Result.EMPTY_RESULT));
+    }
 
-      assertNull(parseFromResult(server, CUST_ID, KEY_NAMESPACE, null));
-      assertNull(parseFromResult(server, CUST_ID, KEY_NAMESPACE, result));
+    @Test
+    public void testParseMarkerResultWithNonZeroPartialIdentityLength() throws Exception {
+      byte[] row = KEY_IDENTITY_FULL.getFullIdentityView().copyBytesIfNecessary();
+      Result result = Result.create(Arrays.asList(
+        new KeyValue(row, KEY_META_INFO_FAMILY, KEY_STATE_QUAL_BYTES, new byte[] { FAILED.getVal() }),
+        new KeyValue(row, KEY_META_INFO_FAMILY, REFRESHED_TIMESTAMP_QUAL_BYTES, Bytes.toBytes(0L))));
+
+      IllegalArgumentException ex = null;
+      try {
+        parseFromResult(server, KEY_IDENTITY_FULL, result);
+      } catch (IllegalArgumentException e) {
+        ex = e;
+      }
+      assertNotNull(ex);
+      assertTrue(ex.getMessage().contains("Partial identity length must be 0"));
+      assertTrue(ex.getMessage().contains("got: " + KEY_IDENTITY_FULL.getPartialIdentityLength()));
     }
 
     @Test
     public void testGetActiveKeyMissingWrappedKey() throws Exception {
-      Result result = mock(Result.class);
-      when(table.get(any(Get.class))).thenReturn(result);
-      when(result.getValue(eq(KEY_META_INFO_FAMILY), eq(KEY_STATE_QUAL_BYTES)))
+      when(table.get(any(Get.class))).thenReturn(result1);
+      when(result1.getValue(eq(KEY_META_INFO_FAMILY), eq(KEY_STATE_QUAL_BYTES)))
         .thenReturn(new byte[] { ACTIVE.getVal() }, new byte[] { INACTIVE.getVal() });
 
-      byte[] keyMetadataHash = ManagedKeyData.constructMetadataHash(KEY_METADATA);
       IOException ex;
-      ex = assertThrows(IOException.class,
-        () -> accessor.getKey(CUST_ID, KEY_SPACE_GLOBAL, keyMetadataHash));
+      ex = assertThrows(IOException.class, () -> accessor.getKey(KEY_IDENTITY_FULL));
       assertEquals("ACTIVE key must have a wrapped key", ex.getMessage());
-      ex = assertThrows(IOException.class,
-        () -> accessor.getKey(CUST_ID, KEY_SPACE_GLOBAL, keyMetadataHash));
+      ex = assertThrows(IOException.class, () -> accessor.getKey(KEY_IDENTITY_FULL));
       assertEquals("INACTIVE key must have a wrapped key", ex.getMessage());
+
     }
 
     @Test
     public void testGetKeyMissingSTK() throws Exception {
       when(result1.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_WRAPPED_BY_STK_QUAL_BYTES)))
         .thenReturn(new byte[] { 0 });
-      when(systemKeyCache.getSystemKeyByChecksum(anyLong())).thenReturn(null);
+      when(systemKeyCache.getSystemKeyByIdentity(any(byte[].class))).thenReturn(null);
       when(table.get(any(Get.class))).thenReturn(result1);
 
-      byte[] keyMetadataHash = ManagedKeyData.constructMetadataHash(KEY_METADATA);
-      ManagedKeyData result = accessor.getKey(CUST_ID, KEY_NAMESPACE, keyMetadataHash);
+      ManagedKeyData result = accessor.getKey(KEY_IDENTITY_FULL);
 
       assertNull(result);
     }
@@ -328,8 +374,7 @@ public class TestKeymetaTableAccessor {
     public void testGetKeyWithWrappedKey() throws Exception {
       ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
 
-      byte[] keyMetadataHash = ManagedKeyData.constructMetadataHash(keyData.getKeyMetadata());
-      ManagedKeyData result = accessor.getKey(CUST_ID, KEY_NAMESPACE, keyMetadataHash);
+      ManagedKeyData result = accessor.getKey(KEY_IDENTITY_FULL);
 
       verify(table).get(any(Get.class));
       assertNotNull(result);
@@ -341,7 +386,7 @@ public class TestKeymetaTableAccessor {
       assertEquals(ACTIVE, result.getKeyState());
 
       // When DEK checksum doesn't match, we expect a null value.
-      result = accessor.getKey(CUST_ID, KEY_NAMESPACE, keyMetadataHash);
+      result = accessor.getKey(KEY_IDENTITY_FULL);
       assertNull(result);
     }
 
@@ -349,8 +394,7 @@ public class TestKeymetaTableAccessor {
     public void testGetKeyWithoutWrappedKey() throws Exception {
       when(table.get(any(Get.class))).thenReturn(result2);
 
-      byte[] keyMetadataHash = ManagedKeyData.constructMetadataHash(keyMetadata2);
-      ManagedKeyData result = accessor.getKey(CUST_ID, KEY_NAMESPACE, keyMetadataHash);
+      ManagedKeyData result = accessor.getKey(KEY_IDENTITY_FULL);
 
       verify(table).get(any(Get.class));
       assertNotNull(result);
@@ -365,10 +409,10 @@ public class TestKeymetaTableAccessor {
     public void testGetAllKeys() throws Exception {
       ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
 
-      when(scanner.iterator()).thenReturn(List.of(result1, result2).iterator());
+      when(scanner.iterator()).thenReturn(java.util.Arrays.asList(result1, result2).iterator());
       when(table.getScanner(any(Scan.class))).thenReturn(scanner);
 
-      List<ManagedKeyData> allKeys = accessor.getAllKeys(CUST_ID, KEY_NAMESPACE, true);
+      List<ManagedKeyData> allKeys = accessor.getAllKeys(KEY_IDENTITY_PREFIX, true);
 
       assertEquals(2, allKeys.size());
       assertEquals(keyData.getKeyMetadata(), allKeys.get(0).getKeyMetadata());
@@ -377,27 +421,93 @@ public class TestKeymetaTableAccessor {
     }
 
     @Test
+    public void testGetAllKeysExcludeMarkersWhenIncludeMarkersFalse() throws Exception {
+      ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
+      byte[] markerRow = KEY_IDENTITY_PREFIX.getIdentityPrefixView().copyBytesIfNecessary();
+      Result markerResult = Result.create(Arrays.asList(
+        new KeyValue(markerRow, KEY_META_INFO_FAMILY, KEY_STATE_QUAL_BYTES, new byte[] { FAILED.getVal() }),
+        new KeyValue(markerRow, KEY_META_INFO_FAMILY, REFRESHED_TIMESTAMP_QUAL_BYTES, Bytes.toBytes(0L))));
+
+      when(scanner.iterator()).thenReturn(java.util.Arrays.asList(result1, markerResult).iterator());
+      when(table.getScanner(any(Scan.class))).thenReturn(scanner);
+
+      List<ManagedKeyData> allKeys = accessor.getAllKeys(KEY_IDENTITY_PREFIX, false);
+
+      assertEquals(1, allKeys.size());
+      assertEquals(keyData.getKeyMetadata(), allKeys.get(0).getKeyMetadata());
+      verify(table).getScanner(any(Scan.class));
+    }
+
+    @Test
+    public void testGetAllKeysSkipsNullParsedResults() throws Exception {
+      ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
+      Result missingStkResult = Mockito.mock(Result.class);
+      when(missingStkResult.isEmpty()).thenReturn(false);
+      when(missingStkResult.getRow())
+        .thenReturn(KEY_IDENTITY_FULL.getFullIdentityView().copyBytesIfNecessary());
+      when(missingStkResult.getValue(eq(KEY_META_INFO_FAMILY), eq(KEY_STATE_QUAL_BYTES)))
+        .thenReturn(new byte[] { ACTIVE.getVal() });
+      when(missingStkResult.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_METADATA_QUAL_BYTES)))
+        .thenReturn("metadata-missing-stk".getBytes());
+      when(missingStkResult.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_WRAPPED_BY_STK_QUAL_BYTES)))
+        .thenReturn(new byte[] { 1 });
+      when(missingStkResult.getValue(eq(KEY_META_INFO_FAMILY), eq(STK_CHECKSUM_QUAL_BYTES)))
+        .thenReturn(Bytes.toBytes(0L));
+      when(missingStkResult.getValue(eq(KEY_META_INFO_FAMILY), eq(REFRESHED_TIMESTAMP_QUAL_BYTES)))
+        .thenReturn(Bytes.toBytes(0L));
+      when(systemKeyCache.getSystemKeyByIdentity(any(byte[].class)))
+        .thenReturn(latestSystemKey, (ManagedKeyData) null);
+
+      when(scanner.iterator())
+        .thenReturn(java.util.Arrays.asList(result1, missingStkResult).iterator());
+      when(table.getScanner(any(Scan.class))).thenReturn(scanner);
+
+      List<ManagedKeyData> allKeys = accessor.getAllKeys(KEY_IDENTITY_PREFIX, true);
+
+      assertEquals(1, allKeys.size());
+      assertEquals(keyData.getKeyMetadata(), allKeys.get(0).getKeyMetadata());
+      verify(table).getScanner(any(Scan.class));
+    }
+
+    @Test
     public void testGetActiveKey() throws Exception {
       ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
 
-      when(scanner.iterator()).thenReturn(List.of(result1).iterator());
+      when(scanner.iterator()).thenReturn(java.util.Arrays.asList(result1).iterator());
       when(table.get(any(Get.class))).thenReturn(result1);
 
-      ManagedKeyData activeKey = accessor.getKeyManagementStateMarker(CUST_ID, KEY_NAMESPACE);
+      ManagedKeyData activeKey = accessor.getKeyManagementStateMarker(KEY_IDENTITY_PREFIX);
 
       assertNotNull(activeKey);
       assertEquals(keyData, activeKey);
       verify(table).get(any(Get.class));
     }
 
+    @Test
+    public void testGetKeyManagementStateMarkerWithFullIdentityCoversFalseBranch() throws Exception {
+      ManagedKeyData keyData = setupActiveKey(CUST_ID, result1);
+
+      when(table.get(any(Get.class))).thenReturn(result1);
+
+      ManagedKeyData activeKey = accessor.getKeyManagementStateMarker(KEY_IDENTITY_FULL);
+
+      assertNotNull(activeKey);
+      assertEquals(keyData.getKeyMetadata(), activeKey.getKeyMetadata());
+      assertEquals(ACTIVE, activeKey.getKeyState());
+      verify(table).get(any(Get.class));
+    }
+
     private ManagedKeyData setupActiveKey(byte[] custId, Result result) throws Exception {
-      ManagedKeyData keyData = managedKeyProvider.getManagedKey(custId, KEY_NAMESPACE);
+      ManagedKeyData keyData = managedKeyProvider.getManagedKey(KEY_IDENTITY_PREFIX);
       byte[] dekWrappedBySTK =
         EncryptionUtil.wrapKey(conf, null, keyData.getTheKey(), latestSystemKey.getTheKey());
       when(result.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_WRAPPED_BY_STK_QUAL_BYTES)))
         .thenReturn(dekWrappedBySTK);
       when(result.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_CHECKSUM_QUAL_BYTES)))
         .thenReturn(Bytes.toBytes(keyData.getKeyChecksum()), Bytes.toBytes(0L));
+      when(result.getValue(eq(KEY_META_INFO_FAMILY), eq(STK_CHECKSUM_QUAL_BYTES))).thenReturn(
+        ManagedKeyIdentityUtils.constructRowKeyForIdentity(latestSystemKey.getKeyCustodian(),
+          latestSystemKey.getKeyNamespaceBytes(), latestSystemKey.getPartialIdentity()));
       // Update the mock to return the correct metadata from the keyData
       when(result.getValue(eq(KEY_META_INFO_FAMILY), eq(DEK_METADATA_QUAL_BYTES)))
         .thenReturn(keyData.getKeyMetadata().getBytes());
@@ -417,7 +527,10 @@ public class TestKeymetaTableAccessor {
     if (keyData.getTheKey() != null) {
       assertNotNull(valueMap.get(new Bytes(DEK_CHECKSUM_QUAL_BYTES)));
       assertNotNull(valueMap.get(new Bytes(DEK_WRAPPED_BY_STK_QUAL_BYTES)));
-      assertEquals(new Bytes(Bytes.toBytes(latestSystemKey.getKeyChecksum())),
+      assertEquals(
+        new Bytes(
+          ManagedKeyIdentityUtils.constructRowKeyForIdentity(latestSystemKey.getKeyCustodian(),
+            latestSystemKey.getKeyNamespaceBytes(), latestSystemKey.getPartialIdentity())),
         valueMap.get(new Bytes(STK_CHECKSUM_QUAL_BYTES)));
     } else {
       assertNull(valueMap.get(new Bytes(DEK_CHECKSUM_QUAL_BYTES)));
@@ -432,12 +545,12 @@ public class TestKeymetaTableAccessor {
   }
 
   // Verify the key checksum, wrapped key, and STK checksum columns are deleted
-  private static void assertDeleteColumns(Delete delete) {
+  private static void assertDeleteColumns(Delete delete, boolean includeMetadata) {
     Map<byte[], List<Cell>> familyCellMap = delete.getFamilyCellMap();
     assertTrue(familyCellMap.containsKey(KEY_META_INFO_FAMILY));
 
     List<Cell> cells = familyCellMap.get(KEY_META_INFO_FAMILY);
-    assertEquals(3, cells.size());
+    assertEquals(includeMetadata ? 4 : 3, cells.size());
 
     // Verify each column is present in the delete
     Set<byte[]> qualifiers =
@@ -446,6 +559,9 @@ public class TestKeymetaTableAccessor {
     assertTrue(qualifiers.stream().anyMatch(q -> Bytes.equals(q, DEK_CHECKSUM_QUAL_BYTES)));
     assertTrue(qualifiers.stream().anyMatch(q -> Bytes.equals(q, DEK_WRAPPED_BY_STK_QUAL_BYTES)));
     assertTrue(qualifiers.stream().anyMatch(q -> Bytes.equals(q, STK_CHECKSUM_QUAL_BYTES)));
+    if (includeMetadata) {
+      assertTrue(qualifiers.stream().anyMatch(q -> Bytes.equals(q, DEK_METADATA_QUAL_BYTES)));
+    }
   }
 
   private static Map<Bytes, Bytes> getValueMap(Mutation mutation) {
@@ -485,8 +601,10 @@ public class TestKeymetaTableAccessor {
 
     @Test
     public void testDisableKey() throws Exception {
+      ManagedKeyIdentity fullKeyIdentity = ManagedKeyIdentityUtils
+        .fullKeyIdentityFromMetadata(CUST_ID_BYTES, KEY_NAMESPACE_BYTES, "testMetadata");
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, keyState, "testMetadata");
+        new ManagedKeyData(fullKeyIdentity, null, keyState, "testMetadata", 123L);
 
       accessor.disableKey(keyData);
 
@@ -496,20 +614,45 @@ public class TestKeymetaTableAccessor {
       int putIndex = 0;
       ManagedKeyState targetState = keyState == ACTIVE ? ACTIVE_DISABLED : INACTIVE_DISABLED;
       if (keyState == ACTIVE) {
-        assertTrue(
-          Bytes.compareTo(constructRowKeyForCustNamespace(keyData), mutations.get(0).getRow())
-              == 0);
+        assertTrue(Bytes.compareTo(constructRowKeyForCustNamespace(keyData.getKeyCustodian(),
+          keyData.getKeyNamespaceBytes()), mutations.get(0).getRow()) == 0);
         ++putIndex;
       }
-      assertPut(keyData, (Put) mutations.get(putIndex), constructRowKeyForMetadata(keyData),
+      assertPut(keyData, (Put) mutations.get(putIndex),
+        constructRowKeyForIdentity(keyData.getKeyCustodian(), keyData.getKeyNamespaceBytes(),
+          keyData.getPartialIdentity()),
         targetState);
       if (keyState == INACTIVE) {
-        assertTrue(
-          Bytes.compareTo(constructRowKeyForMetadata(keyData), mutations.get(putIndex + 1).getRow())
-              == 0);
+        assertTrue(Bytes.compareTo(constructRowKeyForIdentity(keyData.getKeyCustodian(),
+          keyData.getKeyNamespaceBytes(), keyData.getPartialIdentity()),
+          mutations.get(putIndex + 1).getRow()) == 0);
         // Verify the key checksum, wrapped key, and STK checksum columns are deleted
-        assertDeleteColumns((Delete) mutations.get(putIndex + 1));
+        assertDeleteColumns((Delete) mutations.get(putIndex + 1), false);
       }
+    }
+
+    @Test
+    public void testDisableKeySkipCustNamespaceRowWhenActive() throws Exception {
+      ManagedKeyIdentity fullKeyIdentity = ManagedKeyIdentityUtils
+        .fullKeyIdentityFromMetadata(CUST_ID_BYTES, KEY_NAMESPACE_BYTES, "testMetadata");
+      ManagedKeyData keyData =
+        new ManagedKeyData(fullKeyIdentity, null, ACTIVE, "testMetadata", 123L);
+
+      accessor.disableKey(keyData, false);
+
+      verify(table).batch(mutationsCaptor.capture(), any());
+      List<Mutation> mutations = mutationsCaptor.getValue();
+      // When deleteCustNamespaceRow=false, ACTIVE key should not delete cust+namespace row.
+      assertEquals(2, mutations.size());
+      assertTrue(mutations.get(0) instanceof Put);
+      assertTrue(mutations.get(1) instanceof Delete);
+      assertTrue(Bytes.compareTo(constructRowKeyForIdentity(keyData.getKeyCustodian(),
+        keyData.getKeyNamespaceBytes(), keyData.getPartialIdentity()), mutations.get(0).getRow())
+        == 0);
+      assertTrue(Bytes.compareTo(constructRowKeyForIdentity(keyData.getKeyCustodian(),
+        keyData.getKeyNamespaceBytes(), keyData.getPartialIdentity()), mutations.get(1).getRow())
+        == 0);
+      assertDeleteColumns((Delete) mutations.get(1), false);
     }
   }
 
@@ -529,12 +672,13 @@ public class TestKeymetaTableAccessor {
     @Test
     public void testUpdateActiveStateFromInactiveToActive() throws Exception {
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, INACTIVE, "metadata", 123L);
-      ManagedKeyData systemKey =
-        new ManagedKeyData(new byte[] { 1 }, KEY_SPACE_GLOBAL, null, ACTIVE, "syskey", 100L);
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, INACTIVE, "metadata", 123L);
+      ManagedKeyIdentity fullKeyIdentity = ManagedKeyIdentityUtils
+        .fullKeyIdentityFromMetadata(new Bytes(new byte[] { 1 }), KEY_NAMESPACE_BYTES, "syskey");
+      ManagedKeyData systemKey = new ManagedKeyData(fullKeyIdentity, null, ACTIVE, "syskey", 100L);
       when(systemKeyCache.getLatestSystemKey()).thenReturn(systemKey);
 
-      accessor.updateActiveState(keyData, ACTIVE);
+      accessor.updateActiveState(keyData, ACTIVE, false);
 
       verify(table).batch(mutationsCaptor.capture(), any());
       List<Mutation> mutations = mutationsCaptor.getValue();
@@ -544,9 +688,9 @@ public class TestKeymetaTableAccessor {
     @Test
     public void testUpdateActiveStateFromActiveToInactive() throws Exception {
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, ACTIVE, "metadata", 123L);
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, ACTIVE, "metadata", 123L);
 
-      accessor.updateActiveState(keyData, INACTIVE);
+      accessor.updateActiveState(keyData, INACTIVE, false);
 
       verify(table).batch(mutationsCaptor.capture(), any());
       List<Mutation> mutations = mutationsCaptor.getValue();
@@ -554,11 +698,24 @@ public class TestKeymetaTableAccessor {
     }
 
     @Test
+    public void testUpdateActiveStateFromActiveToInactiveSkipDelete() throws Exception {
+      ManagedKeyData keyData =
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, ACTIVE, "metadata", 123L);
+
+      accessor.updateActiveState(keyData, INACTIVE, true);
+
+      verify(table).batch(mutationsCaptor.capture(), any());
+      List<Mutation> mutations = mutationsCaptor.getValue();
+      assertEquals(1, mutations.size());
+      assertTrue(mutations.get(0) instanceof Put);
+    }
+
+    @Test
     public void testUpdateActiveStateNoOp() throws Exception {
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, ACTIVE, "metadata", 123L);
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, ACTIVE, "metadata", 123L);
 
-      accessor.updateActiveState(keyData, ACTIVE);
+      accessor.updateActiveState(keyData, ACTIVE, false);
 
       verify(table, Mockito.never()).batch(any(), any());
     }
@@ -566,12 +723,13 @@ public class TestKeymetaTableAccessor {
     @Test
     public void testUpdateActiveStateFromDisabledToActive() throws Exception {
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, DISABLED, "metadata", 123L);
-      ManagedKeyData systemKey =
-        new ManagedKeyData(new byte[] { 1 }, KEY_SPACE_GLOBAL, null, ACTIVE, "syskey", 100L);
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, DISABLED, "metadata", 123L);
+      ManagedKeyIdentity fullKeyIdentity = ManagedKeyIdentityUtils
+        .fullKeyIdentityFromMetadata(new Bytes(new byte[] { 1 }), KEY_NAMESPACE_BYTES, "syskey");
+      ManagedKeyData systemKey = new ManagedKeyData(fullKeyIdentity, null, ACTIVE, "syskey", 100L);
       when(systemKeyCache.getLatestSystemKey()).thenReturn(systemKey);
 
-      accessor.updateActiveState(keyData, ACTIVE);
+      accessor.updateActiveState(keyData, ACTIVE, false);
 
       verify(table).batch(mutationsCaptor.capture(), any());
       List<Mutation> mutations = mutationsCaptor.getValue();
@@ -582,10 +740,129 @@ public class TestKeymetaTableAccessor {
     @Test
     public void testUpdateActiveStateInvalidNewState() {
       ManagedKeyData keyData =
-        new ManagedKeyData(CUST_ID, KEY_NAMESPACE, null, ACTIVE, "metadata", 123L);
+        new ManagedKeyData(KEY_IDENTITY_FULL, null, ACTIVE, "metadata", 123L);
 
       assertThrows(IllegalArgumentException.class,
-        () -> accessor.updateActiveState(keyData, DISABLED));
+        () -> accessor.updateActiveState(keyData, DISABLED, false));
+    }
+  }
+
+  /**
+   * Tests for custodian and namespace length limits (max 255 bytes / 255 chars) and row key format.
+   */
+  @RunWith(BlockJUnit4ClassRunner.class)
+  @Category({ MasterTests.class, SmallTests.class })
+  public static class TestCustodianNamespaceLength extends TestKeymetaTableAccessor {
+    @ClassRule
+    public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestCustodianNamespaceLength.class);
+
+    @Test
+    public void testConstructRowKeyUsesSingleByteForCustodianLength() {
+      byte[] keyCust = new byte[] { 1, 2, 3 };
+      String keyNamespace = "ns";
+      byte[] keyNamespaceBytes = Bytes.toBytes(keyNamespace);
+      byte[] rowKey = constructRowKeyForCustNamespace(keyCust, keyNamespaceBytes);
+      // Format: 1 byte custLen + custodian + 1 byte nsLen + namespace UTF-8 bytes
+      int nsLen = keyNamespaceBytes.length;
+      assertEquals(1 + keyCust.length + 1 + nsLen, rowKey.length);
+      assertEquals(keyCust.length, rowKey[0] & 0xFF);
+      assertTrue("Row key should contain custodian at offset 1",
+        Bytes.equals(keyCust, Bytes.copy(rowKey, 1, keyCust.length)));
+      int offsetAfterCust = 1 + keyCust.length;
+      int storedNsLen = rowKey[offsetAfterCust] & 0xFF;
+      assertEquals(keyNamespace, Bytes.toString(rowKey, offsetAfterCust + 1, storedNsLen));
+    }
+
+    @Test
+    public void testMaxLengthCustodianAndNamespaceAllowed() throws Exception {
+      byte[] maxCust = new byte[ManagedKeyData.MAX_UNSIGNED_BYTE];
+      for (int i = 0; i < maxCust.length; i++) {
+        maxCust[i] = (byte) ('a' + (i % 26));
+      }
+      StringBuilder nsSb = new StringBuilder(ManagedKeyData.MAX_UNSIGNED_BYTE);
+      for (int i = 0; i < ManagedKeyData.MAX_UNSIGNED_BYTE; i++) {
+        nsSb.append('n');
+      }
+      String maxNamespace = nsSb.toString();
+      byte[] maxNamespaceBytes = Bytes.toBytes(maxNamespace);
+
+      byte[] rowKey = constructRowKeyForCustNamespace(maxCust, maxNamespaceBytes);
+      assertNotNull(rowKey);
+      assertEquals(1 + maxCust.length + 1 + maxNamespaceBytes.length, rowKey.length);
+
+      ManagedKeyIdentity maxCustIdentity = ManagedKeyIdentityUtils
+        .fullKeyIdentityFromMetadata(new Bytes(maxCust), new Bytes(maxNamespaceBytes), "meta");
+      ManagedKeyData keyData = new ManagedKeyData(maxCustIdentity, null, INACTIVE, "meta", 0L);
+      accessor.addKey(keyData);
+    }
+
+    @Test
+    public void testEmptyCustodianRejected() {
+      byte[] emptyCust = new byte[0];
+      byte[] keyNamespaceBytes = Bytes.toBytes("ns");
+      IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        () -> constructRowKeyForCustNamespace(emptyCust, keyNamespaceBytes));
+      assertTrue(ex.getMessage(), ex.getMessage().contains("custodian length must be 1-255"));
+    }
+
+    @Test
+    public void testEmptyNamespaceRejected() {
+      byte[] keyCust = new byte[] { 1 };
+      byte[] emptyNamespaceBytes = Bytes.toBytes("");
+      IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        () -> constructRowKeyForCustNamespace(keyCust, emptyNamespaceBytes));
+      assertTrue(ex.getMessage(), ex.getMessage().contains("namespace length must be 1-255"));
+    }
+  }
+
+  @RunWith(BlockJUnit4ClassRunner.class)
+  @Category({ MasterTests.class, SmallTests.class })
+  public static class TestRefreshTimestamp extends TestKeymetaTableAccessor {
+    @ClassRule
+    public static final HBaseClassTestRule CLASS_RULE =
+      HBaseClassTestRule.forClass(TestRefreshTimestamp.class);
+
+    @Captor
+    private ArgumentCaptor<List<Mutation>> mutationsCaptor;
+
+    @Test
+    public void testUpdateRefreshTimestamp_ActiveState() throws Exception {
+      doTestUpdateRefreshTimestamp(ACTIVE);
+    }
+
+    @Test
+    public void testUpdateRefreshTimestamp_InactiveState() throws Exception {
+      doTestUpdateRefreshTimestamp(INACTIVE);
+    }
+
+    public void doTestUpdateRefreshTimestamp(ManagedKeyState state) throws Exception {
+      ManagedKeyData keyData = new ManagedKeyData(KEY_IDENTITY_FULL, null, state, "metadata", 123L);
+
+      // Inject timestamp via environment edge manager and verify that it is used in the mutation.
+      long newTimestamp = System.currentTimeMillis();
+      ManualEnvironmentEdge edge = new ManualEnvironmentEdge();
+      EnvironmentEdgeManager.injectEdge(edge);
+      edge.setValue(newTimestamp);
+      try {
+        accessor.updateRefreshTimestamp(keyData);
+      } finally {
+        EnvironmentEdgeManager.reset();
+      }
+
+      // Verify that there are 2 mutations in the batch and both contain only refreshed timestamp
+      // column.
+      verify(table).batch(mutationsCaptor.capture(), any());
+      List<Mutation> mutations = mutationsCaptor.getValue();
+      assertEquals(state == ACTIVE ? 2 : 1, mutations.size());
+      Map<Bytes, Bytes> valueMap0 = getValueMap(mutations.get(0));
+      assertTrue(Bytes.compareTo(Bytes.toBytes(newTimestamp),
+        valueMap0.get(new Bytes(REFRESHED_TIMESTAMP_QUAL_BYTES)).copyBytes()) == 0);
+      if (state == ACTIVE) {
+        Map<Bytes, Bytes> valueMap1 = getValueMap(mutations.get(1));
+        assertTrue(Bytes.compareTo(Bytes.toBytes(newTimestamp),
+          valueMap1.get(new Bytes(REFRESHED_TIMESTAMP_QUAL_BYTES)).copyBytes()) == 0);
+      }
     }
   }
 }
